Fix hanging conversation closure.
